@@ -1,3 +1,9 @@
+{{\$NEXT}}
+
+    [ DOCUMENTATION ]
+    * Improve Dancer documentation
+      (Damien Krotkine)
+
 1.3049_01   14.05.2011
 
     [ API CHANGES ]
